objects/SESOC__SESOCSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>E-Signature Settings</description>
    <fields>
        <fullName>SESOC__LoggingLevel__c</fullName>
        <description>The Administrator populates this text field to establish the logging level to capture. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__LoggingProvider__c</fullName>
        <description>The Administrator populates this text field to establish the logging provider to use. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Logging Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SESOC__VendorProvider__c</fullName>
        <description>The Administrator populates this text field to establish the vendor provider to use. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SESOC - E-Signature Settings</label>
</CustomObject>